--- a/_data/attributes.yml
+++ b/_data/attributes.yml
@@ -1,5 +1,4 @@
-strapline:
-  standard: Bringing the weird grooves since 2013
-  opengraph: bringing the weird grooves since 2013
-
+straplines:
+  - Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
+  - Bringing the weird grooves since 2013
 #map_tiles: Pioneer
