--- a/_data/attributes.yml
+++ b/_data/attributes.yml
@@ -1,6 +1,6 @@
 straplines:
   - Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
   - Bringing the weird grooves since 2013
-  - What Herbie Hancock would sound like if he was a 3-piece band
-  - Uncommonly good driving music
+  - “What Herbie Hancock would sound like if he was a 3-piece band”
+  - “Uncommonly good driving music”
 #map_tiles: Pioneer
