--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,11 @@
 ---
+- title: NRF
+  id: 246202062
+  url: http://soundcloud.com/rawfunkmaharishi/nrf
+  location: Rogue Studios
+  date: '2016-01-20'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Slinky
   id: 236917458
   url: http://soundcloud.com/rawfunkmaharishi/slinky-2
