Gary's photos from Club 1001

--- a/_data/flickr.yaml
+++ b/_data/flickr.yaml
@@ -1,4 +1,95 @@
 ---
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26030386035/
+  photo_url: https://farm2.staticflickr.com/1479/26030386035_30c10ec488.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25425622404/
+  photo_url: https://farm2.staticflickr.com/1565/25425622404_493ec72872.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26004429386/
+  photo_url: https://farm2.staticflickr.com/1474/26004429386_a9f69a0d82.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25757529640/
+  photo_url: https://farm2.staticflickr.com/1519/25757529640_1bff4d798f.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26030363435/
+  photo_url: https://farm2.staticflickr.com/1469/26030363435_e4b70f1385.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26030357615/
+  photo_url: https://farm2.staticflickr.com/1514/26030357615_ddb1655774.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Writing the set list in DF Mexico
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26030351765/
+  photo_url: https://farm2.staticflickr.com/1688/26030351765_e31701e3d1.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25757505020/
+  photo_url: https://farm2.staticflickr.com/1559/25757505020_cfecbe3c84.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26004399566/
+  photo_url: https://farm2.staticflickr.com/1668/26004399566_47ae161c4e.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25937782602/
+  photo_url: https://farm2.staticflickr.com/1513/25937782602_fdf3e86210.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25937775122/
+  photo_url: https://farm2.staticflickr.com/1455/25937775122_852f79a112.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25757480710/
+  photo_url: https://farm2.staticflickr.com/1582/25757480710_a799ffb681.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
+- title: Club 1001, March 2016
+  date: '2016-03-24'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26004369306/
+  photo_url: https://farm2.staticflickr.com/1613/26004369306_ce9057f091.jpg
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
+  photographer: gary
 - title: New Cross Inn
   date: '2015-07-06'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/19437246576/
@@ -31,76 +122,6 @@
   date: '2014-10-22'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15010630514/
   photo_url: https://farm6.staticflickr.com/5602/15010630514_0e44c0dfc4.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445789720/
-  photo_url: https://farm6.staticflickr.com/5616/15445789720_89fdbc98a6.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444724049/
-  photo_url: https://farm4.staticflickr.com/3946/15444724049_1281b5890a.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444839959/
-  photo_url: https://farm6.staticflickr.com/5598/15444839959_787064e003.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445504487/
-  photo_url: https://farm4.staticflickr.com/3956/15445504487_2b11ee4c80.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445493727/
-  photo_url: https://farm4.staticflickr.com/3953/15445493727_118b0a436b.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631479625/
-  photo_url: https://farm4.staticflickr.com/3933/15631479625_b6168ee903.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445376017/
-  photo_url: https://farm6.staticflickr.com/5602/15445376017_594364f209.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445769330/
-  photo_url: https://farm4.staticflickr.com/3937/15445769330_df00451025.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15607642076/
-  photo_url: https://farm6.staticflickr.com/5611/15607642076_f358eb9331.jpg
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
-  photographer: kim
-- title: The Comedy, October 2014
-  date: '2014-10-22'
-  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631338195/
-  photo_url: https://farm6.staticflickr.com/5606/15631338195_1dce26279b.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
