--- a/_data/flickr.yaml
+++ b/_data/flickr.yaml
@@ -1,40 +1,40 @@
 ---
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26030386035/
   photo_url: https://farm2.staticflickr.com/1479/26030386035_30c10ec488.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25425622404/
   photo_url: https://farm2.staticflickr.com/1565/25425622404_493ec72872.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26004429386/
   photo_url: https://farm2.staticflickr.com/1474/26004429386_a9f69a0d82.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25757529640/
   photo_url: https://farm2.staticflickr.com/1519/25757529640_1bff4d798f.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26030363435/
   photo_url: https://farm2.staticflickr.com/1469/26030363435_e4b70f1385.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26030357615/
   photo_url: https://farm2.staticflickr.com/1514/26030357615_ddb1655774.jpg
@@ -48,42 +48,42 @@
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25757505020/
   photo_url: https://farm2.staticflickr.com/1559/25757505020_cfecbe3c84.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26004399566/
   photo_url: https://farm2.staticflickr.com/1668/26004399566_47ae161c4e.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25937782602/
   photo_url: https://farm2.staticflickr.com/1513/25937782602_fdf3e86210.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25937775122/
   photo_url: https://farm2.staticflickr.com/1455/25937775122_852f79a112.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/25757480710/
   photo_url: https://farm2.staticflickr.com/1582/25757480710_a799ffb681.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: gary
-- title: Club 1001, March 2016
+- title: Cafe 1001, March 2016
   date: '2016-03-24'
   photo_page: https://www.flickr.com/photos/rawfunkmaharishi/26004369306/
   photo_url: https://farm2.staticflickr.com/1613/26004369306_ce9057f091.jpg
