--- a/_data/albums.yml
+++ b/_data/albums.yml
@@ -1,8 +1,12 @@
 takatsuka:
-  outlets: 
+  outlets:
+  - name: YouTube
+    url: https://www.youtube.com/watch?v=FLB8vJXf71E&list=PLuPLM2FI60-PMPgbLKOazfWSvfa-ZLIzC
   - name: Spotify
     url: https://play.spotify.com/album/5GoS0MKtTna4X90fStHjvh
   - name: Google Play
     url: https://play.google.com/store/music/album/Raw_Funk_Maharishi_Takatsuka?id=B2ednais3bcu3ua7cymck4wrxm4
   - name: Amazon
     url: https://www.amazon.co.uk/gp/product/B01CH4A5ZG
+  - name: Sainsbury's
+    url: http://www.sainsburysentertainment.co.uk/music/Raw-Funk-Maharishi/Takatsuka/MUS-REL-0005192553
