--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,11 @@
 ---
+- title: Letter For Leona
+  id: 265825956
+  url: http://soundcloud.com/rawfunkmaharishi/letter-for-leona
+  location: Vine Yard Studios
+  date: '2016-05-18'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: NRF
   id: 246202062
   url: http://soundcloud.com/rawfunkmaharishi/nrf
