--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,11 @@
 ---
+- title: Mudskipper
+  id: 275569841
+  url: http://soundcloud.com/rawfunkmaharishi/mudskipper
+  location: Vine Yard Studios
+  date: '2016-07-25'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Noble
   id: 273156937
   url: http://soundcloud.com/rawfunkmaharishi/noble
