--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -9,7 +9,7 @@
 - title: Noble
   id: 273156937
   url: http://soundcloud.com/rawfunkmaharishi/noble
-  location: location:Rooz Studios
+  location: Rooz Studios
   date: '2016-07-07'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
