Nuts to Snapchat

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -22,9 +22,9 @@
   url:         https://github.com/rawfunkmaharishi/
   fontawesome: fa-github
 
-- title:       Snapchat
-  url:         /snapchat
-  fontawesome: fa-comment
+#- title:       Snapchat
+#  url:         /snapchat
+#  fontawesome: fa-comment
 
 - title:       Data API
   url:         http://data.rawfunkmaharishi.uk/
