--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,11 @@
 ---
+- title: Fade Zero
+  id: 285255767
+  url: http://soundcloud.com/rawfunkmaharishi/fade-zero
+  location: Vine Yard Studios
+  date: '2016-09-27'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Mudskipper
   id: 275569841
   url: http://soundcloud.com/rawfunkmaharishi/mudskipper
