--- a/_data/attributes.yml
+++ b/_data/attributes.yml
@@ -1,8 +1,15 @@
 straplines:
-  - Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
   - Bringing the weird grooves since 2013
   - “What Herbie Hancock would sound like if he was a 3-piece band”
   - “Uncommonly good driving music”
+  - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
+  - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
+  - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
+  - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
+  - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
+  - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
+  - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
+  - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
   - As featured on <a href="https://news.ycombinator.com/item?id=11149584">Hacker News</a>
 
 map:
