--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,93 +1,109 @@
 ---
+- title: Make It So
+  id: 329956769
+  url: https://soundcloud.com/rawfunkmaharishi/make-it-so
+  location: Rooz Studios
+  date: '2017-06-14'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+- title: Tokyo Used Guitar
+  id: 329956606
+  url: https://soundcloud.com/rawfunkmaharishi/tokyo-used-guitar-1
+  location: Rooz Studios
+  date: '2017-06-14'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: New York Stuntman
   id: 285814520
-  url: http://soundcloud.com/rawfunkmaharishi/new-york-stuntman
+  url: https://soundcloud.com/rawfunkmaharishi/new-york-stuntman
   location: Vine Yard Studios
   date: '2016-09-27'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Fade Zero
   id: 286292229
-  url: http://soundcloud.com/rawfunkmaharishi/fade-zero-1
+  url: https://soundcloud.com/rawfunkmaharishi/fade-zero-1
   location: Vine Yard Studios
   date: '2016-10-04'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Mudskipper
   id: 275569841
-  url: http://soundcloud.com/rawfunkmaharishi/mudskipper
+  url: https://soundcloud.com/rawfunkmaharishi/mudskipper
   location: Vine Yard Studios
   date: '2016-07-25'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Noble
   id: 273156937
-  url: http://soundcloud.com/rawfunkmaharishi/noble
+  url: https://soundcloud.com/rawfunkmaharishi/noble
   location: Rooz Studios
   date: '2016-07-07'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Letter For Leona
   id: 265825956
-  url: http://soundcloud.com/rawfunkmaharishi/letter-for-leona
+  url: https://soundcloud.com/rawfunkmaharishi/letter-for-leona
   location: Vine Yard Studios
   date: '2016-05-18'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: NRF
   id: 246202062
-  url: http://soundcloud.com/rawfunkmaharishi/nrf
+  url: https://soundcloud.com/rawfunkmaharishi/nrf
   location: Rogue Studios
   date: '2016-01-20'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Plimsole
   id: 217587811
-  url: http://soundcloud.com/rawfunkmaharishi/plimsole
-  location: |
-    Rogue Studios
+  url: https://soundcloud.com/rawfunkmaharishi/plimsole
+  location: 'Rogue Studios
+
+'
   date: '2015-07-30'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Made In Hong Kong
   id: 207833308
-  url: http://soundcloud.com/rawfunkmaharishi/made-in-hong-kong
+  url: https://soundcloud.com/rawfunkmaharishi/made-in-hong-kong
   location: Rooz Studios
   date: '2015-05-19'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Glockenspiel
   id: 200762822
-  url: http://soundcloud.com/rawfunkmaharishi/glockenspiel
-  location: |
-    Rogue Studios
+  url: https://soundcloud.com/rawfunkmaharishi/glockenspiel
+  location: 'Rogue Studios
+
+'
   date: '2015-04-09'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Tortoise Stampede
   id: 197173771
-  url: http://soundcloud.com/rawfunkmaharishi/tortoise-stampede
+  url: https://soundcloud.com/rawfunkmaharishi/tortoise-stampede
   location: Rogue Studios
   date: '2015-03-11'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Bernard
   id: 192841052
-  url: http://soundcloud.com/rawfunkmaharishi/bernard
+  url: https://soundcloud.com/rawfunkmaharishi/bernard
   location: Islington Academy
   date: '2015-02-18'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Junalbandi
   id: 193005357
-  url: http://soundcloud.com/rawfunkmaharishi/junalbandi-3
+  url: https://soundcloud.com/rawfunkmaharishi/junalbandi-3
   location: Islington Academy
   date: '2015-02-18'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Beer, Of Course, But Why
   id: 193006525
-  url: http://soundcloud.com/rawfunkmaharishi/beer-of-course-but-why
+  url: https://soundcloud.com/rawfunkmaharishi/beer-of-course-but-why
   location: Islington Academy
   date: '2015-02-18'
   license: Attribution-NonCommercial-ShareAlike
