--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,37 +1,65 @@
 ---
+- title: Fade Zero
+  id: 422318784
+  url: https://soundcloud.com/rawfunkmaharishi/fade-zero-1
+  location: Vine Yard Studios
+  date: '2018-03-07'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+- title: Live Soldering
+  id: 422317761
+  url: https://soundcloud.com/rawfunkmaharishi/live-soldering
+  location: Vine Yard Studios
+  date: '2018-03-07'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+- title: Ceramic Dragon
+  id: 422314245
+  url: https://soundcloud.com/rawfunkmaharishi/ceramic-dragon
+  location: Vine Yard Studio
+  date: '2018-03-07'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+- title: The Cone Mill
+  id: 422310432
+  url: https://soundcloud.com/rawfunkmaharishi/the-cone-mill
+  location: Vine Yard Studios
+  date: '2018-03-07'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+- title: Route
+  id: 422308083
+  url: https://soundcloud.com/rawfunkmaharishi/route
+  location: Vine Yard Studios
+  date: '2018-03-07'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+- title: New York Stuntman
+  id: 422305119
+  url: https://soundcloud.com/rawfunkmaharishi/new-york-stuntman
+  location: Vine Yard Studios
+  date: '2018-03-07'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+- title: Ted
+  id: 408490110
+  url: https://soundcloud.com/rawfunkmaharishi/ted
+  location: Vine Yard Studios
+  date: '2018-03-04'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+- title: The Oak Key
+  id: 408490086
+  url: https://soundcloud.com/rawfunkmaharishi/the-oak-key
+  location: Vine Yard Studios
+  date: '2018-03-04'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Make It So
   id: 329956769
   url: https://soundcloud.com/rawfunkmaharishi/make-it-so
   location: Rooz Studios
   date: '2017-06-14'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: jj3
-  id: 330389348
-  url: https://soundcloud.com/rawfunkmaharishi/jj3
-  location: Rooz Studios
-  date: '2017-06-14'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Tokyo Used Guitar
-  id: 329956606
-  url: https://soundcloud.com/rawfunkmaharishi/tokyo-used-guitar-1
-  location: Rooz Studios
-  date: '2017-06-14'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: New York Stuntman
-  id: 285814520
-  url: https://soundcloud.com/rawfunkmaharishi/new-york-stuntman
-  location: Vine Yard Studios
-  date: '2016-09-27'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Fade Zero
-  id: 286292229
-  url: https://soundcloud.com/rawfunkmaharishi/fade-zero-1
-  location: Vine Yard Studios
-  date: '2016-10-04'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Mudskipper
@@ -41,75 +69,10 @@
   date: '2016-07-25'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Noble
-  id: 273156937
-  url: https://soundcloud.com/rawfunkmaharishi/noble
-  location: Rooz Studios
-  date: '2016-07-07'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Letter For Leona
   id: 265825956
   url: https://soundcloud.com/rawfunkmaharishi/letter-for-leona
   location: Vine Yard Studios
   date: '2016-05-18'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: NRF
-  id: 246202062
-  url: https://soundcloud.com/rawfunkmaharishi/nrf
-  location: Rogue Studios
-  date: '2016-01-20'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Plimsole
-  id: 217587811
-  url: https://soundcloud.com/rawfunkmaharishi/plimsole
-  location: |
-    Rogue Studios
-  date: '2015-07-30'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Made In Hong Kong
-  id: 207833308
-  url: https://soundcloud.com/rawfunkmaharishi/made-in-hong-kong
-  location: Rooz Studios
-  date: '2015-05-19'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Glockenspiel
-  id: 200762822
-  url: https://soundcloud.com/rawfunkmaharishi/glockenspiel
-  location: |
-    Rogue Studios
-  date: '2015-04-09'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Tortoise Stampede
-  id: 197173771
-  url: https://soundcloud.com/rawfunkmaharishi/tortoise-stampede
-  location: Rogue Studios
-  date: '2015-03-11'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Bernard
-  id: 192841052
-  url: https://soundcloud.com/rawfunkmaharishi/bernard
-  location: Islington Academy
-  date: '2015-02-18'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Junalbandi
-  id: 193005357
-  url: https://soundcloud.com/rawfunkmaharishi/junalbandi-3
-  location: Islington Academy
-  date: '2015-02-18'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Beer, Of Course, But Why
-  id: 193006525
-  url: https://soundcloud.com/rawfunkmaharishi/beer-of-course-but-why
-  location: Islington Academy
-  date: '2015-02-18'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
